[gd_scene load_steps=3 format=3 uid="uid://bmwhkoun7g7qe"]

[ext_resource type="Script" path="res://src/board_square.gd" id="1_jh8ap"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vm3gx"]
size = Vector2(16, 16)

[node name="BoardSquare" type="Node2D"]
script = ExtResource("1_jh8ap")

[node name="Highlight" type="ColorRect" parent="."]
modulate = Color(0.866667, 1, 0.870588, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_right = 16.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="ClickArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ClickArea"]
z_index = 2
position = Vector2(8, 8)
shape = SubResource("RectangleShape2D_vm3gx")

[connection signal="mouse_entered" from="ClickArea" to="." method="_on_click_area_mouse_entered"]
[connection signal="mouse_exited" from="ClickArea" to="." method="_on_click_area_mouse_exited"]
